feat(java): migrate to java 21